--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="img/24-T1-Owljudge-Development.pdf" target="_blank">Development Document</a></li>
     <li><a href="img/24-T1-OwlJudge-Design.pdf" target="_blank">Design Document Document</a></li>
     <li><a href="https://github.com/OwlJudge-Mobile-App/OwlJudge-App" target="_blank">Github Repository</a></li>
-    <li><a href="your-video-link" target="_blank">Final Presentation Video</a></li>
+    <li><a href="https://www.youtube.com/watch?v=lAneYUDEhuw" target="_blank">Final Presentation Video</a></li>
   </ul>
 </nav>
 
